# django-gymtracker

./: .djlintrc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  env.example  main.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
deploy/: gymtracker.service  setup-server.sh
gymtracker/: asgi.py  settings.py  urls.py  wsgi.py
templates/: 400.html  403.html  404.html  500.html  base.html
templates/account/: email.html  login.html  logout.html  signup.html
templates/workouts/: add_exercise.html  add_exercise_type.html  complete_workout.html  create_workout.html  dashboard.html  delete_exercise.html  edit_exercise.html  exercise_list.html  invite_user.html  manage_users.html  user_profile.html  workout_detail.html  workout_history.html
workouts/: admin.py  forms.py  models.py  test_error_pages.py  test_forms.py  test_models.py  test_templatetags.py  test_views.py  tests.py  urls.py  views.py
workouts/management/commands/: create_test_users.py  runserver.py
workouts/migrations/: 0001_initial.py  0002_userprofile_name.py
workouts/templatetags/: duration_filters.py
