[project]
name = "django-gymtracker"
version = "0.1.0"
description = "A Django web application for tracking gym workouts and exercise progress"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.2.6",
    "django-allauth>=65.11.2",
    "python-dotenv>=1.1.1",
    "sentry-sdk[django]>=2.38.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gymtracker", "workouts"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "gymtracker.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
]
